filter/sort menu font-sizing adjustment and layout repairs. Alignment issues at md/sm sizes for modal prices addressed. providence coloring made more readable when filters not active.

--- a/_universals.scss
+++ b/_universals.scss
@@ -226,7 +226,7 @@ $tokenFifth: #6f7ca8;
       cursor: pointer;
       display: inline-block;
       border: 1px solid $lighterOpacity;
-      font: 700 13px/1.3 'Open Sans', 'Arial', sans-serif;
+      font: 700 14px/1.3 'Open Sans', 'Arial', sans-serif;
       margin: 0;
       outline: none;
       padding: 3px $mainGutter/2.5 3px $mainGutter/2;
@@ -259,7 +259,7 @@ $tokenFifth: #6f7ca8;
       -webkit-padding-start: 0;
       -moz-padding-start: 0;
       background: white;
-      font-size: 13px;
+      font-size: 14px;
       line-height:1.2;
       padding: $mainGutter/2 0;
       position: absolute;
@@ -310,8 +310,8 @@ $tokenFifth: #6f7ca8;
       position: relative;
       }
     .webkite-sort-area + .webkite-filter-area{
-      padding-left: 78px;
-      margin-left: -65px;
+      padding-left: 82px;
+      margin-left: -69px;
       }
     .webkite-applied-filters{
       position: relative; 
@@ -324,7 +324,7 @@ $tokenFifth: #6f7ca8;
       border: 1px solid $lighterOpacity;
       display: inline-block;
       height: 28px;
-      padding: 3px 25px 3px 69px;
+      padding: 5px 25px 5px 73px;
       position: relative;
       width: 100%;
       text-align: left;
@@ -332,9 +332,9 @@ $tokenFifth: #6f7ca8;
       span{
         @if $colorVariant == light{color: $lightOpacity;} 
         @if $colorVariant == dark{color: $lightOpacity/2;} 
-        font-size: 13px;
-        line-height: 20px;
-        padding: 0 $mainGutter/4;
+        font-size: 14px;
+        line-height: 1.2em;
+        padding: 0 0.41667em 0 0;
         vertical-align: top;
         }
       }
@@ -355,10 +355,9 @@ $tokenFifth: #6f7ca8;
       @if $colorVariant == dark{border: 1px solid $lighterOpacity;} 
       @if $colorVariant == light{background-clip: padding-box;} 
       color: $lightOpacity;
-      font: 700 13px/1 'Open Sans', 'Arial', sans-serif;
-      padding: 3px 6px 3px $mainGutter/2;
+      font: 700 14px/1 'Open Sans', 'Arial', sans-serif;
+      padding: 0 0.625em;
       height: 28px;
-      width:68px;
       text-align:left;
       i{
         @if $colorVariant == light{background: url("plus-light.png") no-repeat;} 
@@ -366,8 +365,7 @@ $tokenFifth: #6f7ca8;
         display: inline-block;
         height: 12px;
         width: 12px;
-        margin-left: $mainGutter/4;
-        margin-right: -3px;
+        margin-left: $mainGutter/2.5;
         pointer-events: none;
         position:relative;
         top:1px;
@@ -379,18 +377,20 @@ $tokenFifth: #6f7ca8;
       overflow: hidden;
       white-space: nowrap;
       width: 100%;
+      & > span:first-child {padding-left:0.41667em;}
       }
     /* tokens */
     a.webkite-remove-filter{
       @include ellipsisThis;
-      @include roundedUp (2px);
+      @include roundedUp(2px);
       color: white;
-      font-size: 13px;
-      line-height: 20px;
+      font-size: 14px;
+      line-height: 1;
       max-width: 100px;
-      padding: 0 $mainGutter/4;
+      padding: 0.0625em 0.3125em;
       text-align: left;
       word-wrap: normal;
+      margin-right:0.41667em;
       &:hover{text-decoration: line-through;}
       }
     [class^="filter-group"]{
@@ -437,7 +437,7 @@ $tokenFifth: #6f7ca8;
       -webkit-padding-start: 0;
       -moz-padding-start: 0;
       background: white;
-      font-size: 13px;
+      font-size: 14px;
       padding: $mainGutter/2 0;
       position: absolute;
       z-index: 3;
@@ -500,7 +500,7 @@ $tokenFifth: #6f7ca8;
       @include gradiateHorizontal;
       height: auto; width: 1.5em;
       position: absolute;
-      left: 66px;
+      left: 72px;
       top:-1px;
       bottom:-1px;
       }
@@ -509,15 +509,16 @@ $tokenFifth: #6f7ca8;
       @include boxedUp;
       background: white;
       border: 1px solid $lighterOpacity;
-      line-height: 16px;
-      padding: $mainGutter/4 25px $mainGutter/4 $mainGutter/4;
+      line-height: 19px;
+      padding: $mainGutter/4 25px $mainGutter/10 $mainGutter/4;
       position: absolute;
       top:-1px;
       right:-1px;
-      left:66px;
+      left:72px;
       z-index: 3;
       .all-filters-wrapper{
         white-space: normal;
+        & > span:first-child {padding-left:0;}
         [class^="filter-group"]{display: inline;}
         }
       }
