--- a/dark.scss
+++ b/dark.scss
@@ -120,9 +120,6 @@ $colorVariant:dark;
   .webkite-headline {
     text-align:center;
     margin-bottom: $mainGutter/4;
-    .webkite-winery {
-      display:inline-block;
-      }
     .webkite-wine-name {
       display:inline-block;
       }
@@ -146,6 +143,8 @@ $colorVariant:dark;
     }
   .webkite-providence {
     margin-top:$mainGutter/2.5;
+    color:$lightOpacity;
+    span {opacity:0.75;}
     &:empty {display:none;}
     a + a:before, 
     span + span:before, 
@@ -258,8 +257,11 @@ $colorVariant:dark;
         z-index:1;
         }    
       + .webkite-result-body {
+        @include boxedUp;
+        background:none;
         display:inline-block;
         position:relative;
+        width:100%;
         }
       }
     .webkite-result-body{
@@ -284,6 +286,7 @@ $colorVariant:dark;
       height:100%;
       display:table;
       margin-top:0;
+      width:100%;
       & > .webkite-block {
         display:table-cell;
         vertical-align:middle;
@@ -388,7 +391,6 @@ $colorVariant:dark;
         }
       .webkite-price-label{
         font-size:0.75em;
-        text-transform: uppercase;
         display:inline;
         }
       }
@@ -434,7 +436,6 @@ $colorVariant:dark;
         }
       .webkite-price-label{
         font-size:0.65em;
-        text-transform: uppercase;
         display:inline;
         }
       }
@@ -451,6 +452,9 @@ $colorVariant:dark;
         padding-left:$imageWidthMd + $mainGutter;
         }
       }
+    .webkite-prices-wrap {padding-left:0;}
+    .webkite-prices {margin-left:0;}
+    .webkite-price-label { width:100%;}
     }
   }
 
